[metadata]
name = commander
version = attr: commander.__version__
description = 命令行解析框架,快速构建自己的脚手架命令行工具.
long_description = file: README.rst
url = https://www.example.com/
author = Rock Johnson
author_email = yourname@example.com
license = BSD-3-Clause
classifiers =
    Environment :: Tool Environment
    Framework :: Commander
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
include_package_data = true

